# Console-Game-Engine

./: 3D Graphics Engine 1.cpp  3D Graphics Engine.cpp  Console FPS.cpp  Console Game Engine v1.1.hpp  Console Game Engine.hpp  README.md
3D Graphics Engine/: CMakeLists.txt
3D Graphics Engine/Textures/: cube.spr
3D Graphics Engine/example/: 3D Graphics Engine.cpp  Camera Example.cpp  Model Renderer.cpp  Texturing Example.cpp
3D Graphics Engine/include/: Console Game Engine.hpp  Matrix4x4.h  Matrix4x4.hpp  Mesh.h  Mesh.hpp  Triangle.h  Triangle.hpp  Vec2D.hpp  Vec3D.hpp
3D Graphics Engine/src/: Matrix4x4.cpp  Mesh.cpp  Triangle.cpp  Vec2D.cpp  Vec3D.cpp
Console FPS/: CMakeLists.txt  Console FPS.cpp
Console FPS Sprites/: BrickWall.sprite  BulletShot.sprite  LampPost.sprite
Maze Generator/: CMakeLists.txt  Console Game Engine.hpp  main.cpp
Perlin Noise Generator/: CMakeLists.txt  main.cpp
